--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Import Bootstrap Library-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
   <!-- Import JQuery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <!-- Import Bootstrap Library-->
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" />
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
   <!-- Import Affectiva javascript Library -->
   <script src="https://download.affectiva.com/js/3.2/affdex.js"></script>
 
   <!-- Use Custom CSS and Javascript files-->
   <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
 </head>
 
 
@@ -118,6 +118,6 @@
 
 <footer>
 <!-- Footer Section -->
-
+<script src="script.js"></script>
 </footer>
 </html>
