Fixed annoying space at top

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <title>Time to Face the Music</title>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" type="text/css" href="style.css">
 
 <!-- Header Section -->
 <head>
@@ -60,7 +59,7 @@
 
 <!--Affectiva detector title, instructions -->
 <div>
-  <h3><center>Affectiva JS SDK CameraDetector to track different emotions.</center></h3>
+  <br><center>Affectiva JS SDK CameraDetector to track different emotions.</center></br>
   <p>
     <center>
       <strong>Instructions</strong>
