Trying to add start/stop affective to sidebars...

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ div.c {
   </div>
 
   <div class="c sidenav_left w3-sidebar w3-bar-block w3-card w3-animate-left" id="leftMenu">
-    <button onclick="closeLeftMenu()" class="w3-bar-item w3-button w3-large">Close &times;</button>
+    <button onclick="closeLeftMenu();onStart();" class="w3-bar-item w3-button w3-large">Close &times;</button>
     <a>H</a>
     <a>o</a>
     <a>w</a>
@@ -240,7 +240,7 @@ div.c {
 
 
   <div class="b sidenav_right w3-sidebar w3-bar-block w3-card w3-animate-right" style="display:none;right:0;" id="rightMenu">
-    <button onclick="closeRightMenu()" class="w3-bar-item w3-button w3-large">Close &times;</button>
+    <button onclick="closeRightMenu();onStart();" class="w3-bar-item w3-button w3-large">Close &times;</button>
     <a>P</a>
     <a>l</a>
     <a>a</a>
@@ -253,8 +253,8 @@ div.c {
 
   <!-- Page Content -->
   <div class="w3-teal">
-    <button class="w3-button w3-teal w3-xlarge w3-left" onclick="openLeftMenu()">&#9776;</button>
-    <button class="w3-button w3-teal w3-xlarge w3-right" onclick="openRightMenu()">&#9776;</button>
+    <button class="w3-button w3-teal w3-xlarge w3-left" onclick="openLeftMenu();onStop();">&#9776;</button>
+    <button class="w3-button w3-teal w3-xlarge w3-right" onclick="openRightMenu();onStop();">&#9776;</button>
   </div>
 
   <script>
@@ -264,7 +264,6 @@ div.c {
   function closeLeftMenu() {
     document.getElementById("leftMenu").style.display = "none";
   }
-
   function openRightMenu() {
     document.getElementById("rightMenu").style.display = "block";
   }
