Adding Affectiva to the side bars (Start when open, stop when close)

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <!-- Import Affectiva javascript Library -->
   <script src="https://download.affectiva.com/js/3.2/affdex.js"></script>
 
+  <div class="container" id="affdex_elements" style="z-index: -1"></div>
+
   <!-- Use Custom CSS and Javascript files-->
   <link rel="stylesheet" href="style.css">
 
