--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Import Affectiva javascript Library -->
   <script src="https://download.affectiva.com/js/3.2/affdex.js"></script>
 
-  <div class="container" id="affdex_elements" style="z-index: -1"></div>
+  <div class="container" id="affdex_elements"></div>
 
   <!-- Use Custom CSS and Javascript files-->
   <link rel="stylesheet" href="style.css">
@@ -195,11 +195,9 @@ body {
 div.a {
   text-align: center;
 }
-
 div.b {
   text-align: left;
 }
-
 div.c {
   text-align: right;
 }
@@ -230,16 +228,14 @@ div.c {
     <a>t</a>
   </div>
 
-  <div class="c sidenav_left w3-sidebar w3-bar-block w3-card w3-animate-left" id="leftMenu">
+  <div class="b sidenav_left w3-sidebar w3-bar-block w3-card w3-animate-left" id="leftMenu">
     <button onclick="closeLeftMenu();onStart();" class="w3-bar-item w3-button w3-large">Close &times;</button>
-    <a>H</a>
-    <a>o</a>
-    <a>w</a>
-    <a>-</a>
-    <a>T</a>
-    <a>o</a>
+    <a>Welcome to 'Time to Face the Music'!!</a>
+    <a></a>
+    <a>How it works:</a>
+    <a>:) to add a song to your playlist</a>
+    <a>:( to move on to something new</a>
   </div>
-
 
   <div class="b sidenav_right w3-sidebar w3-bar-block w3-card w3-animate-right" style="display:none;right:0;" id="rightMenu">
     <button onclick="closeRightMenu();onStart();" class="w3-bar-item w3-button w3-large">Close &times;</button>
