Added info to the how to tab

--- a/index.html
+++ b/index.html
@@ -230,11 +230,14 @@ div.c {
 
   <div class="b sidenav_left w3-sidebar w3-bar-block w3-card w3-animate-left" id="leftMenu">
     <button onclick="closeLeftMenu();onStart();" class="w3-bar-item w3-button w3-large">Close &times;</button>
-    <a>Welcome to 'Time to Face the Music'!!</a>
+    <a>Welcome to</a>
+    <a>'Time to Face the Music'!!</a>
     <a></a>
     <a>How it works:</a>
     <a>:) to add a song to your playlist</a>
     <a>:( to move on to something new</a>
+    <a></a>
+    <a>**Close this tab to begin!!**</a>
   </div>
 
   <div class="b sidenav_right w3-sidebar w3-bar-block w3-card w3-animate-right" style="display:none;right:0;" id="rightMenu">
