--- a/index.html
+++ b/index.html
@@ -263,16 +263,23 @@ var SC=SC||{};SC.Widget=function(n){function t(r){if(e[r])return e[r].exports;va
   </div>
 
   <script>
+  var iframeElement = document.querySelector('iframe');
+  var widget1 = SC.Widget(iframeElement);
+
   function openLeftMenu() {
+    widget1.pause();
     document.getElementById("leftMenu").style.display = "block";
   }
   function closeLeftMenu() {
+    widget1.play();
     document.getElementById("leftMenu").style.display = "none";
   }
   function openRightMenu() {
+    widget1.pause();
     document.getElementById("rightMenu").style.display = "block";
   }
   function closeRightMenu() {
+    widget1.play();
     document.getElementById("rightMenu").style.display = "none";
   }
 </script>
@@ -281,7 +288,7 @@ var SC=SC||{};SC.Widget=function(n){function t(r){if(e[r])return e[r].exports;va
 <div>
   <br><center>Affectiva JS SDK CameraDetector to track different emotions.<button onclick="refreshIframe();">button</button></center></br>
   <p>
-    <center><iframe id='sc'width="50%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/500850885&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe></center>
+    <center><iframe id='sc'width="50%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/500850885&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe></center>
     <center>
       <strong>Instructions</strong>
     </br>
