--- a/index.html
+++ b/index.html
@@ -297,6 +297,10 @@ var SC=SC||{};SC.Widget=function(n){function t(r){if(e[r])return e[r].exports;va
     <br/> Press the stop button to end the detector.
   </center>
 </p>
+<div class="progress-bar" id="joy-bar" role="progressbar" aria-valuenow="0"
+aria-valuemin="0" aria-valuemax="100" style="width:0%">
+<span class="sr-only">0% Complete</span>
+</div>
 </div>
 </div>
 </div>
