--- a/index.html
+++ b/index.html
@@ -286,12 +286,13 @@ var SC=SC||{};SC.Widget=function(n){function t(r){if(e[r])return e[r].exports;va
 
 <!--Affectiva detector title, instructions -->
 <div>
-  <br><center>Affectiva JS SDK CameraDetector to track different emotions.<button onclick="refreshIframe();">button</button></center></br>
+  <br><center>Already know you don't like this song? Skip it!: <button onclick="refreshIframe();">Skip</button></center></br>
   <p>
     <center><iframe id='sc'width="50%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/500850885&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe></center>
     <center>
       <strong>Instructions</strong>
     </br>
+    <p style="text-align:center;"><img src="file:///Users/Eda/Downloads/cat_party.jpg" width="300" height="300"></p>
     Press the start button to start the detector.
     <br/> When a face is detected, the probabilities of the different emotions are written to the DOM.
     <br/> Press the stop button to end the detector.
