--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ var SC=SC||{};SC.Widget=function(n){function t(r){if(e[r])return e[r].exports;va
     <center><iframe id='sc'width="50%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/500850885&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe></center>
     <center>
     </br>
-    <p style="text-align:center;"><img src="file:///Users/Eda/Downloads/cat_party.jpg" width="300" height="300"></p>
+    <p style="text-align:center;"><img src="cat_party.jpg" width="300" height="300"></p>
     <br/> &larr; Click this bar to learn how-to utilize our website!
     <br/> Or click that bar to view your current playlist!&rarr;
   </center>
