--- a/index.html
+++ b/index.html
@@ -286,20 +286,32 @@ var SC=SC||{};SC.Widget=function(n){function t(r){if(e[r])return e[r].exports;va
 
 <!--Affectiva detector title, instructions -->
 <div>
-  <br><center>Affectiva JS SDK CameraDetector to track different emotions.<button onclick="refreshIframe();">button</button></center></br>
+  <br><center>Affectiva JS SDK CameraDetector to track two emotions.<button onclick="refreshIframe();">button</button></center></br>
   <p>
     <center><iframe id='sc'width="50%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/500850885&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe></center>
     <center>
       <strong>Instructions</strong>
     </br>
     Press the start button to start the detector.
-    <br/> When a face is detected, the probabilities of the different emotions are written to the DOM.
-    <br/> Press the stop button to end the detector.
+    <br/> When a face is detected, try to make a happy or angry face.
+    <br/> Happiness brings up the green happiness meter, while anger brings up the red angery meter.
   </center>
 </p>
-<div class="progress-bar" id="joy-bar" role="progressbar" aria-valuenow="0"
-aria-valuemin="0" aria-valuemax="100" style="width:0%">
-<span class="sr-only">0% Complete</span>
+
+<div class="progress">
+ <div class="progress-bar progress-bar-success active" id="joy-bar" role="progressbar" aria-valuenow="0"
+ aria-valuemin="0" aria-valuemax="100" style="width:0%">
+Happiness
+ </div>
+ <div class="progress-bar progress-bar-danger active" id="anger-bar" role="progressbar" aria-valuenow="0"
+ aria-valuemin="0" aria-valuemax="100" style="width:0%">
+Anger
+ </div>
+
+
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
