--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ var SC=SC||{};SC.Widget=function(n){function t(r){if(e[r])return e[r].exports;va
   </center>
 </p>
 
-<div class="progress">
+<center><div class="progress">
  <div class="progress-bar progress-bar-success active" id="joy-bar" role="progressbar" aria-valuenow="0"
  aria-valuemin="0" aria-valuemax="100" style="width:0%">
 Happiness
@@ -310,6 +310,7 @@ Anger
 
 
 </div>
+</center>
 </div>
 </div>
 </div>
