Style changes in the how-to tab

--- a/index.html
+++ b/index.html
@@ -234,12 +234,12 @@ var SC=SC||{};SC.Widget=function(n){function t(r){if(e[r])return e[r].exports;va
 
   <div class="b sidenav_left w3-sidebar w3-bar-block w3-card w3-animate-left" id="leftMenu">
     <button onclick="closeLeftMenu();onStart();" class="w3-bar-item w3-button w3-large">Close &times;</button>
-    <a>Welcome to</a>
-    <a>'Time to Face the Music'!!</a>
+    <a><u>Welcome to</a>
+    <a>Time to Face the Music!!</a></u>
     <a></a>
     <a>How it works:</a>
     <a>:) to add a song to your playlist</a>
-    <a>:( to move on to something new</a>
+    <a>:( to move on to something new or press 'Skip'</a>
     <a></a>
     <a>**Close this tab to begin!!**</a>
   </div>
