--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ var SC=SC||{};SC.Widget=function(n){function t(r){if(e[r])return e[r].exports;va
  aria-valuemin="0" aria-valuemax="100" style="width:0%">
 Happiness
  </div>
- <div class="progress-bar progress-bar-success active" id="meh-bar" role="progressbar" aria-valuenow="0"
+ <div class="progress-bar progress-bar-info active" id="meh-bar" role="progressbar" aria-valuenow="0"
  aria-valuemin="0" aria-valuemax="100" style="width:0%">
 Changing Playlist...
  </div>
