fixed the text describing the meters

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ var SC=SC||{};SC.Widget=function(n){function t(r){if(e[r])return e[r].exports;va
     <center>
     </br>
     <p style="text-align:center;"><img src="cat_party.jpg" width="300" height="300"></p>
-    <br/> Happiness brings up the green happiness meter, while anger brings up the red angry meter.
+    <br/> Happiness brings up the green happiness meter, while no reaction fills the blue boredom meter.
 
   </center>
 </p>
