changed skip button to next and added description

--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@ var SC=SC||{};SC.Widget=function(n){function t(r){if(e[r])return e[r].exports;va
     <a></a>
     <a>How it works:</a>
     <a>:) to add a song to your playlist</a>
-    <a>:( to move on to something new or press 'Skip'</a>
+    <a>:( to move on to something new</a>
+    <a>Click 'Next' to move onto something similar</a>
     <a></a>
     <a>**Close this tab to begin!!**</a>
   </div>
@@ -268,7 +269,7 @@ var SC=SC||{};SC.Widget=function(n){function t(r){if(e[r])return e[r].exports;va
 
 <!--Affectiva detector title, instructions -->
 <div>
-  <br><center>Already know you don't like this song? Skip it!: <button onclick="refreshIframe();">Skip</button></center></br>
+  <br><center>Already know you like this song? Listen to a similar one!: <button onclick="refreshIframe();">Next</button></center></br>
   <p>
     <center>
     </br>
